<resources>
    <string name="app_name">App Domicilios</string>
    <string name="txt_login_user">Digite Su Usuario</string>
    <string name="txt_login_password">Digite Contraseña</string>
    <string name="txt_login_remember">Olvido se clave?</string>
    <string name="txt_login_recover">Recuperar clave</string>
    <string name="txt_login_with_user">Sin usuario?</string>
    <string name="txt_login_sign_up">Registrarme</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="text_sign_up">Crear Usuario</string>
    <string name="title_activity_primary_pane">PrimaryPane</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">App Domicilios</string>
    <string name="nav_header_subtitle">jjcarrillo9293@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_restaurants">Restaurante</string>
    <string name="menu_orders">Pedidos</string>
    <string name="menu_historic">Historial</string>
    <string name="menu_notification">Notificaciones</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_index">index</string>
    <string name="todo">TODO</string>
    <string name="shopping_quality">cantidad</string>
    <string name="txt_sales_address">Dirección</string>
    <string name="txt_sales_cost_offered">Valor de Domicilio</string>
    <string name="text_publish_offer">Publicar Oferta</string>
    <string name="text_button_buy">Comprar</string>
    <string name="text_history_publish">Publicar</string>
</resources>