<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_restaurant_24px"
            android:title="@string/menu_restaurants" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_playlist_add_check_24px"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_history_24px"
            android:title="@string/menu_historic" />

        <item
            android:id="@+id/nav_slidesdomi"
            android:icon="@drawable/ic_moped_24px"
            android:title="Modo Domicilio" />
    </group>
</menu>